[project]
name = "flatsat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=8.68.1",
    "adafruit-circuitpython-lis3mdl>=1.2.6",
    "adafruit-circuitpython-lsm6ds>=4.6",
    "gitpython>=3.1.45",
    "matplotlib>=3.10.8",
    "picamera2",
    "rpi-gpio>=0.7.1",
    "matplotlib>=3.7.0",
]
